| Bug #55963 | insufficient debug info when DBDICT encounters restart problem | ||
|---|---|---|---|
| Submitted: | 13 Aug 2010 6:38 | Modified: | 14 Aug 2010 6:16 |
| Reporter: | Jonas Oreland | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Cluster: Cluster (NDB) storage engine | Severity: | S3 (Non-critical) |
| Version: | mysql-5.1-telco-6.3 | OS: | Any |
| Assigned to: | Jonas Oreland | CPU Architecture: | Any |
[13 Aug 2010 6:38]
Jonas Oreland
[13 Aug 2010 6:46]
Jonas Oreland
Note: value 1 - means that create/drop is traced even when not during restart.
[13 Aug 2010 6:48]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/115637 3248 Jonas Oreland 2010-08-13 ndb - bug#55963 - Add DictTrace config variable
[13 Aug 2010 9:09]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/115650 3249 Jonas Oreland 2010-08-13 ndb - bug#55963 - post review, use eventlogger to get date-time too
[13 Aug 2010 9:34]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/115653 3681 Jonas Oreland 2010-08-13 ndb - bug#55963 - 70 specific trace improvements
[13 Aug 2010 10:03]
Bugs System
Pushed into mysql-5.1-telco-7.0 5.1.47-ndb-7.0.17 (revid:jonas@mysql.com-20100813093143-349gmbpcn6j20jz1) (version source revid:jonas@mysql.com-20100813093143-349gmbpcn6j20jz1) (merge vers: 5.1.47-ndb-7.0.17) (pib:20)
[13 Aug 2010 10:05]
Bugs System
Pushed into mysql-5.1-telco-6.3 5.1.47-ndb-6.3.36 (revid:jonas@mysql.com-20100813082428-3wqgwgwrqehc20l2) (version source revid:jonas@mysql.com-20100813082428-3wqgwgwrqehc20l2) (merge vers: 5.1.47-ndb-6.3.36) (pib:20)
[13 Aug 2010 15:03]
Jonas Oreland
pushed to 6.3.36, 7.0.17 and 7.1.6
[14 Aug 2010 6:16]
Jon Stephens
Documented bugfix in the NDB-6.3.36, 7.0.17, and 7.1.2 changelogs, as follows:
Added the DictTrace data node configuration parameter, for
use in debugging NDB code.
Closed.
[3 Sep 2010 14:14]
Jon Stephens
My previous comment contains a typo, and should have began, "Documented bugfix in the NDB-6.3.36, 7.0.17, and 7.1.6 changelogs..."; the changelog entry was added to the 7.1.6 changelog as per Jonas' comment.
