ndb - bug#55963 - Add DictTrace config variable