storage/ndb/include/mgmapi/mgmapi_config_parameters.h
@@ -157,6 +157,8 @@
 #define CFG_DB_MT_BUILD_INDEX         606
 #define CFG_DB_HB_ORDER               607
 
+#define CFG_DB_DICT_TRACE             608
+
 #define CFG_NODE_ARBIT_RANK           200
 #define CFG_NODE_ARBIT_DELAY          201
 #define CFG_202                       202       /* used in later version */
