storage/ndb/src/kernel/blocks/dbdict/Dbdict.hpp
@@ -539,6 +539,7 @@ public:
 
   CArray<SchemaPageRecord> c_schemaPageRecordArray;
 
+  unsigned g_trace;
   DictTabInfo::Table c_tableDesc;
 
   /**
